[package]
name = "rust-yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17"
log = "0.4"
wasm-logger = "0.2"
pulldown-cmark = { version = "0.9.2", default-features = false }
gloo = "0.8"
wasm-bindgen = "0.2.84"
